add image decorations

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "~8.2.3",
     "angularfire2": "^5.2.1",
     "firebase": "^6.4.2",
+    "ngx-lightbox": "^2.1.0",
+    "ngx-skeleton-loader": "^1.2.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
