--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
     "ngx-lightbox": "^2.1.0",
+    "ngx-scrollbar": "^6.0.0",
     "ngx-skeleton-loader": "^1.2.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
