--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "@ctrl/ngx-emoji-mart": "^1.0.1",
     "angularfire2": "^5.2.1",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
