--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
     "@ctrl/ngx-emoji-mart": "^1.0.1",
+    "@types/lodash": "^4.14.144",
     "angularfire2": "^5.2.1",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.15",
+    "ngx-infinite-scroll": "^8.0.0",
     "ngx-lightbox": "^2.1.0",
-    "ngx-scrollbar": "^6.0.0",
     "ngx-skeleton-loader": "^1.2.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
