--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
+    "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.2.3",
     "@angular/material": "^8.1.4",
@@ -24,7 +25,6 @@
     "@angular/router": "~8.2.3",
     "@ctrl/ngx-emoji-mart": "^1.0.1",
     "@types/lodash": "^4.14.144",
-    "angularfire2": "^5.2.1",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
