--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-lightbox": "^2.1.0",
     "ngx-skeleton-loader": "^1.2.2",
+    "randomatic": "^3.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
