--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "messenger",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "ng build --base-href ./ && npm run electron:serve",
+    "electron:serve": "electron ."
   },
   "private": true,
   "dependencies": {
@@ -25,6 +28,8 @@
     "@angular/router": "~8.2.3",
     "@ctrl/ngx-emoji-mart": "^1.0.1",
     "@types/lodash": "^4.14.144",
+    "electron": "^7.1.1",
+    "electron-oauth-helper": "^5.0.1",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
