--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@ctrl/ngx-emoji-mart": "^1.0.1",
     "@types/lodash": "^4.14.144",
     "electron": "^7.1.1",
+    "electron-log": "^3.0.9",
     "electron-oauth-helper": "^5.0.1",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "ngx-electron": "^2.2.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-lightbox": "^2.1.0",
     "ngx-skeleton-loader": "^1.2.2",
