--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "electron": "ng build --base-href ./ && npm run electron:serve",
     "electron:serve": "electron .",
     "package": "ng build --prod --base-href ./ && electron-packager . messenger --icon=resources/icon.png --overwrite --asar=true --no-prune --out=builds",
-    "package:debian": "npm run package && electron-installer-debian --config debian.json"
+    "package:debian": "npm run package && electron-installer-debian --config build.debian.json",
+    "package:windows": "npm run package && node build.windows.js"
   },
   "private": true,
   "dependencies": {
@@ -65,6 +66,7 @@
     "codelyzer": "^5.0.0",
     "electron-installer-debian": "^2.0.1",
     "electron-packager": "^14.1.0",
+    "electron-winstaller": "^4.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
