--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
   "name": "messenger",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Chat application using Angular + Firebase",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TarasMoskovych/messenger"
+  },
+  "author": {
+    "name": "Taras Moskovych",
+    "email": "moskovych.taras@gmail.com"
+  },
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "ng build --base-href ./ && npm run electron:serve",
+    "electron:serve": "electron .",
+    "package": "ng build --prod --base-href ./ && electron-packager . messenger --icon=resources/icon.png --overwrite --asar=true --no-prune --out=builds",
+    "package:debian": "npm run package && electron-installer-debian --config build.debian.json",
+    "package:windows": "npm run package && node build.windows.js"
   },
   "private": true,
   "dependencies": {
@@ -25,9 +40,11 @@
     "@angular/router": "~8.2.3",
     "@ctrl/ngx-emoji-mart": "^1.0.1",
     "@types/lodash": "^4.14.144",
+    "electron-google-oauth": "^2.0.0",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "ngx-electron": "^2.2.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-lightbox": "^2.1.0",
     "ngx-skeleton-loader": "^1.2.2",
@@ -45,6 +62,10 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "electron": "^7.1.1",
+    "electron-installer-debian": "^2.0.1",
+    "electron-packager": "^14.1.0",
+    "electron-winstaller": "^4.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
