--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
-    "@angular/fire": "^5.2.1",
+    "@angular/fire": "^5.2.3",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.2.3",
     "@angular/material": "^8.1.4",
@@ -41,10 +41,12 @@
     "@angular/router": "~8.2.3",
     "@ctrl/ngx-emoji-mart": "^1.0.1",
     "@types/lodash": "^4.14.144",
+    "agora-rtc-sdk": "^2.9.0",
     "electron-google-oauth": "^2.0.0",
-    "firebase": "^6.4.2",
+    "firebase": "^7.5.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "ngx-agora": "^1.5.14",
     "ngx-electron": "^2.2.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-lightbox": "^2.1.0",
@@ -64,7 +66,6 @@
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "electron": "^7.1.1",
-    "electron-installer-debian": "^2.0.1",
     "electron-packager": "^14.1.0",
     "electron-winstaller": "^4.0.0",
     "jasmine-core": "~3.4.0",
